# Navi-Assistant

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  test2
.navi/: cache.json  config.json
docs/: ask.md  config.md  files.md  index.md  info.md  init.md  tools.md
src/navi_assistant/: __entry__.py  __init__.py  __main__.py  ai.py  cache.py  commands.py  config.py  main.py  navi.py  utils.py
src/navi_assistant/cli/: __init__.py  ask.py  config.py  info.py  init.py  setup.py  sync.py
src/navi_assistant/cli/files/: __init__.py  set.py  set_method.diff  sync.py
src/navi_assistant/cli/tools/: __init__.py  pull.py
src/navi_assistant/install/: __init__.py  __main__.py  install.py
src/navi_assistant/resources/: default_commands.json  instructions.txt
src/navi_assistant/style/: __init__.py  art.py  messaging.py
