[project]
name = "navi-assistant"
version = "0.1.3"
description = "Navi is an OpenAI assistant manager which allows you to quickly create assistants with useful tools and query them."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.44.1",
    "click>=8.1.7",
    "rich>=13.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
